--- a/index.html
+++ b/index.html
@@ -1,14 +1,223 @@
 <!doctype html>
 <html lang="pt-BR">
-  <head>
-   <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
+  <link href="src/css/style.css" rel="stylesheet">
+</head>
+<body>
+  <header class="header">
+    <div class="brand">
+      <img src="./src/img/devfsa-logo-white.svg" alt="">
+    </div>
+    <nav class="nav">
+      <a href="#" class="nav-item">manifesto</a>
+      <a href="#" class="nav-item">money</a>
+      <a href="#" class="nav-item">github</a>
+      <a href="#" class="nav-item">telegram</a>
+      <a href="#" class="nav-item">facebook</a>
+    </nav>
+  </header>
+  <main class="meetup-hero">
+      <div class="grid-hero">
+        <div>
+          <div class="sub-title">Próximo Meetup</div>
+          <h2 class="meetup-date">24 ago</h2>
+          <p class="meetup-description">
+            Local: Saguitech
+            Horário: 19:30h
+            Mais info: bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p>
+          <a href="#" class="btn-primary">Inscreva-se</a>
+          <a href="#" class="btn-secondary">Submeter palestra</a>
+        </div>
+        <div>
+          <div class="space-between">
+            <div class="sub-title">Palestras mais votadas</div>
+            <a href="#" class="sub-title-link">Ver todas</a>
+          </div>
+          <div class="keynote-container">
 
-  <body>
+            <div class="grid-2">
 
-    <script></script>
-  </body>
+              <div class="card keynote-card">
+                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
+                <div>
+                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                  <div class="keynote-info">
+                    <p class="keynote-author">Diego Leite</p>
+                    <a href="#" class="keynote-vote voted">
+                      <i class="far fa-arrow-alt-circle-up"></i>
+                      <span class="keynote-vote-number">23</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card keynote-card">
+                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
+                <div>
+                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                  <div class="keynote-info">
+                    <p class="keynote-author">Diego Leite</p>
+                    <a href="#" class="keynote-vote">
+                      <i class="far fa-arrow-alt-circle-up"></i>
+                      <span class="keynote-vote-number">23</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card keynote-card">
+                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
+                <div>
+                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                  <div class="keynote-info">
+                    <p class="keynote-author">Diego Leite</p>
+                    <a href="#" class="keynote-vote">
+                      <i class="far fa-arrow-alt-circle-up"></i>
+                      <span class="keynote-vote-number">23</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card keynote-card">
+                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
+                <div>
+                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                  <div class="keynote-info">
+                    <p class="keynote-author">Diego Leite</p>
+                    <a href="#" class="keynote-vote">
+                      <i class="far fa-arrow-alt-circle-up"></i>
+                      <span class="keynote-vote-number">23</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+    </div>
+  </main>
+  <section class="support">
+    <div class="container">
+      <p>Apoio:</p>
+      <img src="src/img/admobilize-logo.png" alt="">
+      <img src="src/img/club4work-logo.png" alt="">
+      <img src="src/img/binarii-logo.png" alt="">
+      <img src="src/img/paggue-logo.png" alt="">
+      <img src="src/img/hostoo-logo.png" alt="">
+      <img src="src/img/huggy-logo.png" alt="">
+    </div>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="grid-3">
+        <div>
+          <div class="space-between">
+            <div class="sub-title">Vagas DEVFSA</div>
+            <a href="#" class="sub-title-link">Ver mais</a>
+          </div>
+          <div class="card">
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+            </div>
+        </div>
+        <div>
+          <div class="space-between">
+            <div class="sub-title">VAGAS REMOTO.CC</div>
+            <a href="#" class="sub-title-link">Ver mais</a>
+          </div>
+          <div class="card">
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+            </div>
+        </div>
+        <div>
+          <div class="space-between">
+            <div class="sub-title">PRÓXIMOS EVENTOS NO BRASIL</div>
+            <a href="#" class="sub-title-link">Ver mais</a>
+          </div>
+          <div class="card">
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+              <a href="#" class="card-item">
+                <p class="card-item-title">Front-end Developer</p>
+                <p class="card-item-description">Sagui Tech - Feira de Santana - Full-Time</p>
+              </a>
+            </div>
+        </div>
+      
+      </div>
+    </div>
+  </section>
+</body>
 
 </html>
