--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="brand">
-      <img src="./src/img/devfsa-logo-white.svg" alt="">
+      <h1 class="logo-glitch"></h1>
     </div>
     <nav class="nav">
       <a href="#" class="nav-item">manifesto</a>
@@ -107,12 +107,13 @@
   <section class="support">
     <div class="container">
       <p>Apoio:</p>
+      <img src="src/img/absam-logo.png" alt="">
       <img src="src/img/admobilize-logo.png" alt="">
-      <img src="src/img/club4work-logo.png" alt="">
       <img src="src/img/binarii-logo.png" alt="">
-      <img src="src/img/paggue-logo.png" alt="">
+      <img src="src/img/club4work-logo.png" alt="">
       <img src="src/img/hostoo-logo.png" alt="">
       <img src="src/img/huggy-logo.png" alt="">
+      <img src="src/img/paggue-logo.png" alt="">
     </div>
   </section>
   <section class="section">
