--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
       <img src="src/img/admobilize-logo.png" alt="">
       <img src="src/img/binarii-logo.png" alt="">
       <img src="src/img/club4work-logo.png" alt="">
+    </div>
+    <div class="container">
+      <img src="src/img/gerenciagram-logo.png" alt="">
       <img src="src/img/hostoo-logo.png" alt="">
       <img src="src/img/huggy-logo.png" alt="">
       <img src="src/img/paggue-logo.png" alt="">
