--- a/index.html
+++ b/index.html
@@ -14,85 +14,87 @@
       <h1 class="logo-glitch"></h1>
     </div>
     <nav class="nav">
-      <a href="#" class="nav-item">manifesto</a>
-      <a href="#" class="nav-item">money</a>
-      <a href="#" class="nav-item">github</a>
-      <a href="#" class="nav-item">telegram</a>
-      <a href="#" class="nav-item">facebook</a>
+      <a href="#" class="nav-item" target="_blank">finanças</a>
+      <a href="/docs/ManifestoDevFSAMeetups.pdf" class="nav-item" target="_blank">manifesto</a>
+      <a href="https://fb.me/devfsa" class="nav-item" target="_blank">facebook</a>
+      <a href="https://www.meetup.com/pt-BR/dev-fsa/" class="nav-item" target="_blank">meetup</a>
+      <a href="https://t.me/devfsa" class="nav-item" target="_blank">telegram</a>
+      <a href="https://github.com/devfsa" class="nav-item" target="_blank">github</a>
     </nav>
   </header>
   <main class="meetup-hero">
       <div class="grid-hero">
         <div>
           <div class="sub-title">Próximo Meetup</div>
-          <h2 class="meetup-date">24 ago</h2>
+          <h2 class="meetup-date">24 nov</h2>
           <p class="meetup-description">
-            Local: Saguitech
-            Horário: 19:30h
-            Mais info: bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+            Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa comunidade ser mais forte! :D</br></br>
+
+            Local: Digitaliza Negócios</br>
+            Horário: 09:00 - 11:30</br></br>
           </p>
-          <a href="#" class="btn-primary">Inscreva-se</a>
-          <a href="#" class="btn-secondary">Submeter palestra</a>
+          <a href="http://meetu.ps/e/G4vFj/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
+          <a href="https://github.com/devfsa/meetups/issues/3" class="btn-secondary" target="_blank">Submeter palestra</a>
         </div>
         <div>
           <div class="space-between">
             <div class="sub-title">Palestras mais votadas</div>
-            <a href="#" class="sub-title-link">Ver todas</a>
+            <a href="https://github.com/devfsa/meetups/issues/3" class="sub-title-link" target="_blank">Ver todas</a>
           </div>
           <div class="keynote-container">
 
             <div class="grid-2">
 
               <div class="card keynote-card">
-                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
-                <div>
-                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                <div class="keynote-image"><img src="https://avatars3.githubusercontent.com/u/12628714" class="keynote-photo"></div>
+                <div class="keynote-desc">
+                  <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439546167" class="keynote-title" target="_blank">Introdução ao Hacking</a>
                   <div class="keynote-info">
-                    <p class="keynote-author">Diego Leite</p>
-                    <a href="#" class="keynote-vote voted">
+                    <p class="keynote-author">@heitorgo1</p>
+                    <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439546167" class="keynote-vote voted" target="_blank">
                       <i class="far fa-arrow-alt-circle-up"></i>
-                      <span class="keynote-vote-number">23</span>
+                      <span class="keynote-vote-number">14</span>
                     </a>
                   </div>
                 </div>
               </div>
 
               <div class="card keynote-card">
-                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
-                <div>
-                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                <div class="keynote-image"><img src="https://avatars3.githubusercontent.com/u/18318393" class="keynote-photo"></div>
+                <div class="keynote-desc">
+                  <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439540220" class="keynote-title" target="_blank">Firebase: Realtime Database vs...</a>
                   <div class="keynote-info">
-                    <p class="keynote-author">Diego Leite</p>
-                    <a href="#" class="keynote-vote">
+                    <p class="keynote-author">@cleybsoncardoso</p>
+                    <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439540220" class="keynote-vote" target="_blank">
                       <i class="far fa-arrow-alt-circle-up"></i>
-                      <span class="keynote-vote-number">23</span>
+                      <span class="keynote-vote-number">6</span>
                     </a>
                   </div>
                 </div>
               </div>
               <div class="card keynote-card">
-                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
-                <div>
-                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                <div class="keynote-image"><img src="https://avatars1.githubusercontent.com/u/20749018" class="keynote-photo"></div>
+                <div class="keynote-desc">
+                  <a href="https://github.com/cbo317110" class="keynote-title" target="_blank">Javascript, HTTP Requests e Democrito</a>
                   <div class="keynote-info">
-                    <p class="keynote-author">Diego Leite</p>
-                    <a href="#" class="keynote-vote">
+                    <p class="keynote-author">@cbo317110</p>
+                    <a href="https://github.com/cbo317110" class="keynote-vote" target="_blank">
                       <i class="far fa-arrow-alt-circle-up"></i>
-                      <span class="keynote-vote-number">23</span>
+                      <span class="keynote-vote-number">5</span>
                     </a>
                   </div>
                 </div>
               </div>
 
               <div class="card keynote-card">
-                <div class="keynote-image"><img src="src/img/placeholder.png" class="keynote-photo"></div>
-                <div>
-                  <a href="#" class="keynote-title">Javascript a linguagem do futuro</a>
+                <div class="keynote-image"><img src="https://avatars2.githubusercontent.com/u/21749" class="keynote-photo"></div>
+                <div class="keynote-desc">
+                  <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-438902543" class="keynote-title" target="_blank">O patinho feio developer: o que um conto...</a>
                   <div class="keynote-info">
-                    <p class="keynote-author">Diego Leite</p>
-                    <a href="#" class="keynote-vote">
+                    <p class="keynote-author">@ivancrneto</p>
+                    <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-438902543" class="keynote-vote" target="_blank">
                       <i class="far fa-arrow-alt-circle-up"></i>
-                      <span class="keynote-vote-number">23</span>
+                      <span class="keynote-vote-number">4</span>
                     </a>
                   </div>
                 </div>
