--- a/index.html
+++ b/index.html
@@ -109,16 +109,32 @@
   <section class="support">
     <div class="container">
       <p>Apoio:</p>
-      <img src="src/img/absam-logo.png" alt="">
-      <img src="src/img/admobilize-logo.png" alt="">
-      <img src="src/img/binarii-logo.png" alt="">
-      <img src="src/img/club4work-logo.png" alt="">
+      <a href="https://absam.io" target="_blank">
+        <img src="src/img/absam-logo.png" alt="Absam">
+      </a>
+      <a href="https://admobilize.com" target="_blank">
+        <img src="src/img/admobilize-logo.png" alt="AdMobilize">
+      </a>
+      <a href="http://binarii.com.br" target="_blank">
+        <img src="src/img/binarii-logo.png" alt="Binarii">
+      </a>
+      <a href="https://club4work.com.br/" target="_blank">
+        <img src="src/img/club4work-logo.png" alt="Club4Work">
+      </a>
     </div>
     <div class="container">
-      <img src="src/img/gerenciagram-logo.png" alt="">
-      <img src="src/img/hostoo-logo.png" alt="">
-      <img src="src/img/huggy-logo.png" alt="">
-      <img src="src/img/paggue-logo.png" alt="">
+      <a href="https://gerenciagram.com.br" target="_blank">
+        <img src="src/img/gerenciagram-logo.png" alt="Gerenciagram">
+      </a>
+      <a href="https://hostoo.io" target="_blank">
+        <img src="src/img/hostoo-logo.png" alt="Hostoo">
+      </a>
+      <a href="https://huggy.io" target="_blank">
+        <img src="src/img/huggy-logo.png" alt="Huggy">
+      </a>
+      <a href="https://paggue.io" target="_blank">
+        <img src="src/img/paggue-logo.png" alt="Paggue">
+      </a>
     </div>
   </section>
   <section class="section">
