Jobs and Conferences section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
               <p class="card-item-title">DevOpsDaysFSA</p>
               <p class="card-item-description">15 Dezembro - Feira de Santana - Bahia</p>
             </a>
+            <a href="https://gdgfsa.github.io/devfest2018/" class="card-item" target="_blank">
+              <p class="card-item-title">DevFest Feira de Santana</p>
+              <p class="card-item-description">08 Dezembro - Feira de Santana - Bahia</p>
+            </a>
+            <a href="https://devopsdaysfsa.eventize.com.br/index.php?pagina=1" class="card-item" target="_blank">
+              <p class="card-item-title">DevOpsDaysFSA</p>
+              <p class="card-item-description">15 Dezembro - Feira de Santana - Bahia</p>
+            </a>
           </div>
         </div>
       </div>
