Update file paths

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>DevFSA - Desenvolvedores de Feira de Santana</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
-  <link href="src/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -111,30 +111,30 @@
     <div class="container">
       <p>Apoio:</p>
       <a href="https://absam.io" target="_blank">
-        <img src="src/img/absam-logo.png" alt="Absam">
+        <img src="img/absam-logo.png" alt="Absam">
       </a>
       <a href="https://admobilize.com" target="_blank">
-        <img src="src/img/admobilize-logo.png" alt="AdMobilize">
+        <img src="img/admobilize-logo.png" alt="AdMobilize">
       </a>
       <a href="http://binarii.com.br" target="_blank">
-        <img src="src/img/binarii-logo.png" alt="Binarii">
+        <img src="img/binarii-logo.png" alt="Binarii">
       </a>
       <a href="https://club4work.com.br/" target="_blank">
-        <img src="src/img/club4work-logo.png" alt="Club4Work">
+        <img src="img/club4work-logo.png" alt="Club4Work">
       </a>
     </div>
     <div class="container">
       <a href="https://gerenciagram.com.br" target="_blank">
-        <img src="src/img/gerenciagram-logo.png" alt="Gerenciagram">
+        <img src="img/gerenciagram-logo.png" alt="Gerenciagram">
       </a>
       <a href="https://hostoo.io" target="_blank">
-        <img src="src/img/hostoo-logo.png" alt="Hostoo">
+        <img src="img/hostoo-logo.png" alt="Hostoo">
       </a>
       <a href="https://huggy.io" target="_blank">
-        <img src="src/img/huggy-logo.png" alt="Huggy">
+        <img src="img/huggy-logo.png" alt="Huggy">
       </a>
       <a href="https://paggue.io" target="_blank">
-        <img src="src/img/paggue-logo.png" alt="Paggue">
+        <img src="img/paggue-logo.png" alt="Paggue">
       </a>
     </div>
   </section>
@@ -219,7 +219,7 @@
 
   <footer>
     <div class="container">
-      <img src="src/img/devfsa-logo-gray.svg" alt="DevFSA">
+      <img src="img/devfsa-logo-gray.svg" alt="DevFSA">
       <p>Criado com &lt;3 em Feira de Santana. Mantido por <a href="https://github.com/devfsa" target="_blank">contribuidores voluntários.</a></p>
     </div>
   </footer>
