--- a/index.html
+++ b/index.html
@@ -44,64 +44,7 @@
         </div>
         <div class="keynote-container">
 
-          <div class="grid-2">
-
-            <div class="card keynote-card">
-              <div class="keynote-image"><img src="https://avatars3.githubusercontent.com/u/12628714" class="keynote-photo"></div>
-              <div class="keynote-desc">
-                <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439546167" class="keynote-title" target="_blank">Introdução ao Hacking</a>
-                <div class="keynote-info">
-                  <p class="keynote-author">@heitorgo1</p>
-                  <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439546167" class="keynote-vote voted" target="_blank">
-                    <i class="far fa-arrow-alt-circle-up"></i>
-                    <span class="keynote-vote-number">14</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card keynote-card">
-              <div class="keynote-image"><img src="https://avatars3.githubusercontent.com/u/18318393" class="keynote-photo"></div>
-              <div class="keynote-desc">
-                <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439540220" class="keynote-title" target="_blank">Firebase: Realtime Database vs...</a>
-                <div class="keynote-info">
-                  <p class="keynote-author">@cleybsoncardoso</p>
-                  <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-439540220" class="keynote-vote" target="_blank">
-                    <i class="far fa-arrow-alt-circle-up"></i>
-                    <span class="keynote-vote-number">6</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="card keynote-card">
-              <div class="keynote-image"><img src="https://avatars1.githubusercontent.com/u/20749018" class="keynote-photo"></div>
-              <div class="keynote-desc">
-                <a href="https://github.com/cbo317110" class="keynote-title" target="_blank">Javascript, HTTP Requests e Democrito</a>
-                <div class="keynote-info">
-                  <p class="keynote-author">@cbo317110</p>
-                  <a href="https://github.com/cbo317110" class="keynote-vote" target="_blank">
-                    <i class="far fa-arrow-alt-circle-up"></i>
-                    <span class="keynote-vote-number">5</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card keynote-card">
-              <div class="keynote-image"><img src="https://avatars2.githubusercontent.com/u/21749" class="keynote-photo"></div>
-              <div class="keynote-desc">
-                <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-438902543" class="keynote-title" target="_blank">O patinho feio developer: o que um conto...</a>
-                <div class="keynote-info">
-                  <p class="keynote-author">@ivancrneto</p>
-                  <a href="https://github.com/devfsa/meetups/issues/3#issuecomment-438902543" class="keynote-vote" target="_blank">
-                    <i class="far fa-arrow-alt-circle-up"></i>
-                    <span class="keynote-vote-number">4</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-          </div>
+          <div class="grid-2" id="keynotes"></div>
 
         </div>
       </div>
@@ -224,5 +167,39 @@
     </div>
   </footer>
 </body>
+<script>
+fetch('https://api.github.com/repos/devfsa/meetups/issues/3/comments')
+  .then((response)=> {
+      response.json().then((data)=> {
+        let html = '';
+        let keynotes = document.getElementById("keynotes");
+        data.forEach(element => {
+          let { user, html_url, body } = element
+          let title = body.split('\r\n')[0].replace('**', '').replace('**', '')
+          let description = body.split('\r\n')[1]
+          html += '<div class="card keynote-card">'
+          html += '<div class="keynote-image"><img src="' + user.avatar_url + '" class="keynote-photo"></div>'
+          html += '<div class="keynote-desc">'
+          html += '<a href="' + html_url + '" class="keynote-title" target="_blank">' + title + '</a>'
+          html += '<div class="keynote-info">'
+          html += '<p class="keynote-author">@' + user.login + '</p>'
+          html += '<a href="' + html_url + '" class="keynote-vote voted" target="_blank">'
+          html += '<i class="far fa-arrow-alt-circle-up"></i>'
+          html += '<span class="keynote-vote-number"></span>'
+          html += '</a>'
+          html += '</div>'
+          html += '</div>'
+          html += '</div>'
+        });
+        console.log(html)
+        keynotes.innerHTML = html
+
+      });
+    }
+  )
+  .catch(function(err) {
+    console.log('Fetch Error:', err);
+  });
+</script>
 
 </html>
