--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </footer>
 </body>
 <script>
-fetch('https://api.github.com/repos/devfsa/meetups/issues/3/comments')
+fetch('https://api.github.com/repos/devfsa/meetups/issues/3/comments', {headers: {"Accept": "text"}})
   .then((response)=> {
       response.json().then((data)=> {
         const reactionsFetchHeader = { "Accept": "application/vnd.github.squirrel-girl-preview+json" }
@@ -176,7 +176,7 @@ fetch('https://api.github.com/repos/devfsa/meetups/issues/3/comments')
         Promise.all(
           data.map(d => {
             const keynote = {
-              url: d.html_url,
+              url: d.url,
               user: d.user,
               body: d.body,
               title: d.body.split('\r\n')[0].replace(/\*\*/g, '')
@@ -193,53 +193,34 @@ fetch('https://api.github.com/repos/devfsa/meetups/issues/3/comments')
           })
         ).then(keynotes => {
           // after fetching all comments' reactions, sort it and then slice it
-          return keynotes
-            .sort((k1, k2) => k1.reactions.length - k2.reactions.length)
+          let notes = keynotes
+            .sort((k1, k2) => k2.reactions.length - k1.reactions.length)
             .slice(0, 4)
-        });
-        let html = '';
-        let keynotes = document.getElementById("keynotes");
-        const keynotesHTML = data.reduce((html, keynote) => {
+            let html = '';
+        let keynotesElement = document.getElementById("keynotes");
+        const keynotesHTML = notes.reduce((html, keynote) => {
           const { user, url, body, title, reactions } = keynote
           return [
             html,
             '<div class="card keynote-card">',
-              '<div class="keynote-image">'
+              '<div class="keynote-image">',
                 '<img src="', user.avatar_url, '" class="keynote-photo" />',
               '</div>',
               '<div class="keynote-desc">',
-                '<a href=", url, '" class="keynote-title" target="_blank">', title, '</a>',
+                '<a href="', url, '" class="keynote-title" target="_blank">', title, '</a>',
                 '<div class="keynote-info">',
                   '<p class="keynote-author">@', user.login, '</p>',
-                  '<a href="', html_url, '" class="keynote-vote voted" target="_blank">',
+                  '<a href="', url, '" class="keynote-vote voted" target="_blank">',
                     '<i class="far fa-arrow-alt-circle-up"></i>',
-                    '<span class="keynote-vote-number">', reactions.length '</span>',
+                    '<span class="keynote-vote-number">', reactions?reactions.length: 0, '</span>',
                   '</a>',
                 '</div>',
               '</div>',
             '</div>',
           ].join('');
         }, '');
-          let { user, html_url, body } = element
-          let title = body.split('\r\n')[0].replace('**', '').replace('**', '')
-          let description = body.split('\r\n')[1]
-          html += '<div class="card keynote-card">'
-          html += '<div class="keynote-image"><img src="' + user.avatar_url + '" class="keynote-photo"></div>'
-          html += '<div class="keynote-desc">'
-          html += '<a href="' + html_url + '" class="keynote-title" target="_blank">' + title + '</a>'
-          html += '<div class="keynote-info">'
-          html += '<p class="keynote-author">@' + user.login + '</p>'
-          html += '<a href="' + html_url + '" class="keynote-vote voted" target="_blank">'
-          html += '<i class="far fa-arrow-alt-circle-up"></i>'
-          html += '<span class="keynote-vote-number"></span>'
-          html += '</a>'
-          html += '</div>'
-          html += '</div>'
-          html += '</div>'
+        keynotesElement.insertAdjacentHTML('beforeend', keynotesHTML);
         });
-        console.log(html)
-        keynotes.insertAdjacentHTML('beforeend', html);
-
       });
     }
   )
