--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </footer>
 </body>
 <script>
-  fetch('https://api.github.com/repos/devfsa/vagas/issues?state=closed')
+  fetch('https://api.github.com/repos/devfsa/vagas/issues')
     .then((response) => {
       response.json().then((data) => {
         let jobs = data.map(d => {
