--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         Promise.all(
           data.map(d => {
             const keynote = {
-              url: d.url,
+              url: d.html_url,
               user: d.user,
               body: d.body,
               title: d.body.split('\r\n')[0].replace(/\*\*/g, '')
