--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
           comunidade ser mais forte! :D</br></br>
 
-          Local: Digitaliza Negócios</br>
-          Horário: 09:00 - 11:30</br></br>
+          Local: Club4Work Coworking</br>
+          Horário: 19:00 - 21:00</br></br>
         </p>
-        <a href="http://meetu.ps/e/G4vFj/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-        <a href="https://github.com/devfsa/meetups/issues/3" class="btn-secondary" target="_blank">Submeter palestra</a>
+        <a href="http://meetu.ps/e/G7rkz/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
+        <a href="https://github.com/devfsa/meetups/issues/4" class="btn-secondary" target="_blank">Submeter palestra</a>
       </div>
       <div>
         <div class="space-between">
           <div class="sub-title">Palestras mais votadas</div>
-          <a href="https://github.com/devfsa/meetups/issues/3" class="sub-title-link" target="_blank">Ver todas</a>
+          <a href="https://github.com/devfsa/meetups/issues/4" class="sub-title-link" target="_blank">Ver todas</a>
         </div>
         <div class="keynote-container">
 
