Some data updates

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Local: Club4Work Coworking</br>
           Horário: 19:00 - 21:00</br></br>
         </p>
-        <a href="http://meetu.ps/e/G7rkz/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
+        <a href="https://meetu.ps/e/G7rkz/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
         <a href="https://github.com/devfsa/meetups/issues/4" class="btn-secondary" target="_blank">Submeter palestra</a>
       </div>
       <div>
