Add youtube URL

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav class="nav">
       <a href="#" class="nav-item" target="_blank">finanças</a>
       <a href="/docs/ManifestoDevFSAMeetups.pdf" class="nav-item" target="_blank">manifesto</a>
+      <a href="https://www.youtube.com/channel/UC1E4DKVVg1Fnpjidi4XQfaw" class="nav-item" target="_blank">youtube</a>
       <a href="https://fb.me/devfsa" class="nav-item" target="_blank">facebook</a>
       <a href="https://www.meetup.com/pt-BR/dev-fsa/" class="nav-item" target="_blank">meetup</a>
       <a href="https://t.me/devfsa" class="nav-item" target="_blank">telegram</a>
@@ -32,7 +33,7 @@
     <div class="grid-hero">
       <div>
         <div class="sub-title">Próximo Meetup</div>
-        <h2 class="meetup-date">07 dec</h2>
+        <h2 class="meetup-date">07 dez</h2>
         <p class="meetup-description">
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
           comunidade ser mais forte! :D</br></br>
