--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <nav class="nav">
       <a href="#" class="nav-item" target="_blank">finanças</a>
       <a href="/docs/ManifestoDevFSAMeetups.pdf" class="nav-item" target="_blank">manifesto</a>
+      <a href="https://www.instagram.com/devfsaoficial" class="nav-item" target="_blank">instagram</a>
       <a href="https://www.youtube.com/channel/UC1E4DKVVg1Fnpjidi4XQfaw" class="nav-item" target="_blank">youtube</a>
       <a href="https://fb.me/devfsa" class="nav-item" target="_blank">facebook</a>
-      <a href="https://www.meetup.com/pt-BR/dev-fsa/" class="nav-item" target="_blank">meetup</a>
+      <a href="https://www.meetup.com/pt-BR/dev-fsa" class="nav-item" target="_blank">meetup</a>
       <a href="https://t.me/devfsa" class="nav-item" target="_blank">telegram</a>
       <a href="https://github.com/devfsa" class="nav-item" target="_blank">github</a>
     </nav>
