--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav class="nav">
       <a href="#" class="nav-item" target="_blank">finanças</a>
       <a href="/docs/ManifestoDevFSAMeetups.pdf" class="nav-item" target="_blank">manifesto</a>
+      <a href="https://medium.com/@devfsa" class="nav-item" target="_blank">blog</a>
       <a href="https://www.instagram.com/devfsaoficial" class="nav-item" target="_blank">instagram</a>
       <a href="https://www.youtube.com/channel/UC1E4DKVVg1Fnpjidi4XQfaw" class="nav-item" target="_blank">youtube</a>
       <a href="https://fb.me/devfsa" class="nav-item" target="_blank">facebook</a>
