--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
         Promise.all(
           data.map(d => {
             const keynote = {
-              url: d.html_url,
+              url: d.url,
+              html_url: d.html_url,
               user: d.user,
               body: d.body,
               title: d.body.split('\r\n')[0].replace(/\*\*/g, '')
@@ -235,7 +236,7 @@
           let html = '';
           let keynotesElement = document.getElementById("keynotes");
           const keynotesHTML = notes.reduce((html, keynote, i) => {
-            const { user, url, body, title, reactions } = keynote
+            const { user, html_url, body, title, reactions } = keynote
             return [
               html,
               '<div class="card keynote-card">',
@@ -243,10 +244,10 @@
               '<img src="', user.avatar_url, '" class="keynote-photo" />',
               '</div>',
               '<div class="keynote-desc">',
-              '<a href="', url, '" class="keynote-title" target="_blank">', title, '</a>',
+              '<a href="', html_url, '" class="keynote-title" target="_blank">', title, '</a>',
               '<div class="keynote-info">',
               '<p class="keynote-author">@', user.login, '</p>',
-              '<a href="', url, '" class="keynote-vote ', i === 0 ? 'voted' : '', '" target="_blank">',
+              '<a href="', html_url, '" class="keynote-vote ', i === 0 ? 'voted' : '', '" target="_blank">',
               '<i class="far fa-arrow-alt-circle-up"></i>',
               '<span class="keynote-vote-number">', reactions.length, '</span>',
               '</a>',
