Update some urls

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
           comunidade ser mais forte! :D</br></br>
 
-          Local: <a href="https://goo.gl/kv2uw5" class="description-link" target="_blank">Club4Work Coworking</a></br>
+          Local: <a href="https://goo.gl/59rpKY" class="description-link" target="_blank">Club4Work Coworking</a></br>
           Horário: 19:00 - 21:00</br></br>
         </p>
-        <a href="https://meetu.ps/e/G7rkz/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
+        <a href="https://meetu.ps/e/GbkBZ/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
         <a href="https://github.com/devfsa/meetups/issues/5" class="btn-secondary" target="_blank">Submeter palestra</a>
       </div>
       <div>
