--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
     <div class="grid-hero">
       <div>
         <div class="sub-title">Próximo Meetup</div>
-        <h2 class="meetup-date">21 dez</h2>
+        <h2 class="meetup-date">19 jan</h2>
         <p class="meetup-description">
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
           comunidade ser mais forte! :D</br></br>
 
-          Local: <a href="https://goo.gl/maps/PrvUaVA412v" class="description-link" target="_blank">Club4Work Coworking</a></br>
-          Horário: 19:00 - 21:00</br></br>
+          Local: <a href="https://goo.gl/maps/bF6cUf6Rc3L2" class="description-link" target="_blank">Digitaliza Negócios</a></br>
+          Horário: 9:00 - 11:00</br></br>
         </p>
         <a href="https://meetu.ps/e/GbkBZ/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-        <a href="https://github.com/devfsa/meetups/issues/5" class="btn-secondary" target="_blank">Submeter palestra</a>
+        <a href="https://github.com/devfsa/meetups/issues/6" class="btn-secondary" target="_blank">Submeter palestra</a>
       </div>
       <div>
         <div class="space-between">
           <div class="sub-title">Palestras mais votadas</div>
-          <a href="https://github.com/devfsa/meetups/issues/5" class="sub-title-link" target="_blank">Ver todas</a>
+          <a href="https://github.com/devfsa/meetups/issues/6" class="sub-title-link" target="_blank">Ver todas</a>
         </div>
         <div class="keynote-container">
 
@@ -204,7 +204,7 @@
     });
 </script>
 <script>
-  fetch('https://api.github.com/repos/devfsa/meetups/issues/5/comments', { headers: { "Accept": "text" } })
+  fetch('https://api.github.com/repos/devfsa/meetups/issues/6/comments', { headers: { "Accept": "text" } })
     .then((response) => {
       response.json().then((data) => {
         const reactionsFetchHeader = { "Accept": "application/vnd.github.squirrel-girl-preview+json" }
