Update for 5th edition

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
           comunidade ser mais forte! :D</br></br>
 
-          Local: <a href="https://goo.gl/maps/bF6cUf6Rc3L2" class="description-link" target="_blank">Digitaliza Negócios</a></br>
+          Local: <a href="https://goo.gl/maps/CEmC8cCGc962" class="description-link" target="_blank">Digitaliza Negócios</a></br>
           Horário: 9:00 - 11:00</br></br>
         </p>
         <a href="https://meetu.ps/e/GbkBZ/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
