--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="/docs/ManifestoDevFSAMeetups.pdf" class="nav-item" target="_blank">manifesto</a>
       <a href="https://medium.com/@devfsa" class="nav-item" target="_blank">blog</a>
       <a href="https://www.instagram.com/devfsa_" class="nav-item" target="_blank">instagram</a>
-      <a href="https://www.youtube.com/channel/UC1E4DKVVg1Fnpjidi4XQfaw" class="nav-item" target="_blank">youtube</a>
+      <a href="https://www.youtube.com/c/DevFSA" class="nav-item" target="_blank">youtube</a>
       <a href="https://fb.me/devfsa" class="nav-item" target="_blank">facebook</a>
       <a href="https://www.meetup.com/pt-BR/dev-fsa" class="nav-item" target="_blank">meetup</a>
       <a href="https://t.me/devfsa" class="nav-item" target="_blank">telegram</a>
