--- a/index.html
+++ b/index.html
@@ -35,26 +35,24 @@
     <div class="grid-hero">
       <div>
         <div class="sub-title">Próximo Meetup</div>
-        <h2 class="meetup-date">09 fev</h2>
+        <h2 class="meetup-date">23 fev</h2>
         <p class="meetup-description">
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
           comunidade ser mais forte! :D</br></br>
 
-          Local: <a href="https://goo.gl/maps/W2HMHw6zSYx" class="description-link" target="_blank">Museu Parque do Saber</a></br>
-          Horário: 8:00 - 12:00</br></br>
+          Local: <a href="https://goo.gl/maps/hBrJi7kCxJN2" class="description-link" target="_blank">Club4Work Coworking</a></br>
+          Horário: 9:00 - 12:00</br></br>
         </p>
         <a href="http://meetu.ps/e/GnhNg/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-        <a href="https://github.com/devfsa/meetups/issues/7" class="btn-secondary" target="_blank">Submeter palestra</a>
+        <a href="https://github.com/devfsa/meetups/issues/9" class="btn-secondary" target="_blank">Submeter palestra</a>
       </div>
       <div>
         <div class="space-between">
           <div class="sub-title">Palestras mais votadas</div>
-          <a href="https://github.com/devfsa/meetups/issues/7" class="sub-title-link" target="_blank">Ver todas</a>
+          <a href="https://github.com/devfsa/meetups/issues/9" class="sub-title-link" target="_blank">Ver todas</a>
         </div>
         <div class="keynote-container">
-
           <div class="grid-2" id="keynotes"></div>
-
         </div>
       </div>
     </div>
