Add some style for youtube video gallery

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
       <a href="https://github.com/devfsa/meetups/issues/9" class="sub-title-link" target="_blank">Ver todas</a>
     </div>
     <div class="keynote-container">
-
       <div class="grid-2" id="keynotes"></div>
-
     </div>
   </div>
 </div>
@@ -90,10 +88,16 @@
     </a>
   </div>
 </section>
-<section class="section gray">
-  <div id="youtube-videos"></div>
+<section class="youtube-videos">
+  <div class="container">
+    <div class="section-header">
+      <h2>Vídeos</h2>
+      <a href="https://youtube.com/devfsa" target="_blank">Inscreva-se em nosso canal do YouTube</a>
+    </div>
+    <div id="youtube-video-gallery"></div>
+  </div>
 </section>
-<section class="section">
+<section>
   <div class="container">
     <div class="grid-3">
       <div>
