--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
   </div>
 </div>
 </main>
+
+<section class="youtube-videos">
+  <div class="container">
+    
+    <div class="space-between">
+      <div class="sub-title">Vídeos no youtube</div>
+      <a href="https://youtube.com/devfsa" class="sub-title-link" target="_blank">INSCREVA-SE</a>
+    </div>
+    <div id="youtube-video-gallery"></div>
+  </div>
+</section>
+
 <section class="support">
   <div class="container">
     <p>Apoio:</p>
@@ -88,15 +100,7 @@
     </a>
   </div>
 </section>
-<section class="youtube-videos">
-  <div class="container">
-    <div class="section-header">
-      <h2>Vídeos</h2>
-      <a href="https://youtube.com/devfsa" target="_blank">Inscreva-se em nosso canal do YouTube</a>
-    </div>
-    <div id="youtube-video-gallery"></div>
-  </div>
-</section>
+
 <section>
   <div class="container">
     <div class="grid-3">
