Fix YouTube URL

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="container">
     <div class="space-between">
       <div class="sub-title">Vídeos no youtube</div>
-      <a href="https://youtube.com/devfsa" class="sub-title-link" target="_blank">INSCREVA-SE</a>
+      <a href="https://www.youtube.com/devfsa" class="sub-title-link" target="_blank">INSCREVA-SE</a>
     </div>
     <div id="youtube-video-gallery"></div>
   </div>
