Fix navbar responsiveness

--- a/index.html
+++ b/index.html
@@ -12,25 +12,33 @@
   crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/logo.css" rel="stylesheet">
 </head>
 
 <body>
-  <header class="header">
-    <div class="brand">
-      <h1 class="logo-glitch"></h1>
-    </div>
-    <nav class="nav">
-      <a href="#" class="nav-item" target="_blank">finanças</a>
-      <a href="/docs/ManifestoDevFSAMeetups.pdf" class="nav-item" target="_blank">manifesto</a>
-      <a href="https://medium.com/@devfsa" class="nav-item" target="_blank">blog</a>
-      <a href="https://www.instagram.com/devfsa_" class="nav-item" target="_blank">instagram</a>
-      <a href="https://www.youtube.com/c/DevFSA" class="nav-item" target="_blank">youtube</a>
-      <a href="https://fb.me/devfsa" class="nav-item" target="_blank">facebook</a>
-      <a href="https://www.meetup.com/pt-BR/dev-fsa" class="nav-item" target="_blank">meetup</a>
-      <a href="https://t.me/devfsa" class="nav-item" target="_blank">telegram</a>
-      <a href="https://github.com/devfsa" class="nav-item" target="_blank">github</a>
+  <header>
+    <a href="#" class="logo">
+      <div class="logo-glitch"></div>
+    </a>
+    <nav>
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn">
+        <span class="navicon"></span>
+      </label>
+      <ul>
+        <li><a href="#" target="_blank">finanças</a></li>
+        <li><a href="/docs/ManifestoDevFSAMeetups.pdf" target="_blank">manifesto</a></li>
+        <li><a href="https://medium.com/@devfsa" target="_blank">blog</a></li>
+        <li><a href="https://www.instagram.com/devfsa_" target="_blank">instagram</a></li>
+        <li><a href="https://www.youtube.com/c/DevFSA" target="_blank">youtube</a></li>
+        <li><a href="https://fb.me/devfsa" target="_blank">facebook</a></li>
+        <li><a href="https://www.meetup.com/pt-BR/dev-fsa" target="_blank">meetup</a></li>
+        <li><a href="https://t.me/devfsa" target="_blank">telegram</a></li>
+        <li><a href="https://github.com/devfsa" target="_blank">github</a></li>
+      </ul>
     </nav>
   </header>
+
   <main class="meetup-hero">
     <div class="grid-hero">
       <div>
