--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
         Local: <a href="https://goo.gl/maps/hBrJi7kCxJN2" class="description-link" target="_blank">Club4Work Coworking</a></br>
       Horário: 9:00 - 11:30</br></br>
     </p>
-    <a href="http://meetu.ps/e/GnhNg/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-    <a href="https://github.com/devfsa/meetups/issues/9" class="btn-secondary" target="_blank">Submeter palestra</a>
+    <div class="controls">
+      <a href="http://meetu.ps/e/GnhNg/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
+      <a href="https://github.com/devfsa/meetups/issues/9" class="btn-secondary" target="_blank">Submeter palestra</a>
+    </div>
   </div>
   <div>
     <div class="space-between">
