--- a/index.html
+++ b/index.html
@@ -179,9 +179,14 @@
 
 <footer>
   <div class="container">
-    <img src="img/devfsa-logo-gray.svg" alt="DevFSA">
-    <p>Criado com &lt;3 em Feira de Santana. Mantido por <a href="https://github.com/devfsa" target="_blank">contribuidores
-    voluntários.</a></p>
+    <div class="grid-2">
+      <div class="footer-logo">
+        <img src="img/devfsa-logo-gray.svg" alt="DevFSA">
+      </div>
+      <div class="author">
+        <p>Criado com &lt;3 em Feira de Santana. Mantido por <a href="https://github.com/devfsa" target="_blank">contribuidores voluntários.</a></p>
+      </div>
+    </div>
   </div>
 </footer>
 
