Fix footer and header

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="footer-logo">
       <img src="img/devfsa-logo-gray.svg" alt="DevFSA">
     </div>
-    <div class="author">
+    <div class="footer-author">
       <p>Criado com &lt;3 em Feira de Santana. Mantido por <a href="https://github.com/devfsa" target="_blank">contribuidores voluntários.</a></p>
     </div>
   </div>
