Update sponsors list

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 </main>
 
-<section class="support">
+<section class="support" id="apoio">
   <div class="container">
     <div class="sub-title">Apoio:</div>
     <div class="partners">
@@ -93,13 +93,13 @@
         </a>
       </div>
       <div class="image-container">
-        <a href="https://gerenciagram.com.br" target="_blank">
-          <img src="img/logos/gerenciagram.png" alt="Gerenciagram">
+        <a href="https://conexa.app/" target="_blank">
+          <img src="img/logos/conexa.png" alt="Conexa">
         </a>
       </div>
       <div class="image-container">
-        <a href="https://hostoo.io" target="_blank">
-          <img src="img/logos/hostoo.png" alt="Hostoo">
+        <a href="https://gerenciagram.com.br" target="_blank">
+          <img src="img/logos/gerenciagram.png" alt="Gerenciagram">
         </a>
       </div>
       <div class="image-container">
