Update sponsors list

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
         </a>
       </div>
       <div class="image-container">
-        <a href="https://club4work.com.br/" target="_blank">
+        <a href="https://club4work.com.br" target="_blank">
           <img src="img/logos/club4work.png" alt="Club4Work">
         </a>
       </div>
       <div class="image-container">
-        <a href="https://conexa.app/" target="_blank">
+        <a href="https://conexa.app" target="_blank">
           <img src="img/logos/conexa.png" alt="Conexa">
         </a>
       </div>
