:bug: Add missing id

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </p>
     <div class="controls">
       <a href="http://meetu.ps/e/GR0sx/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-      <a href="#" class="btn-secondary" target="_blank">Submeter palestra</a>
+      <a href="#" class="btn-secondary" id="submission" target="_blank">Submeter palestra</a>
     </div>
   </div>
   <div>
